# audio-deepfake-detection

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/raw/: transcript_fixes.json
docs/: AI course final projects_.odt  goal.md  literature.md  proposal.md  results.md  runtimes.md  server_runbook.md  ~$ course final projects_.odt
notebooks/: 01_creation.ipynb  02_evaluation.ipynb  03_detection.ipynb  04_cross_test.ipynb
presentation/: slides_content.md  slides_outline.md
reports/cross_cnn/: cross_result.json
reports/cross_ssl/: cross_result.json
reports/detection/: README.md
reports/detection/base_cnn_lfcc_eval/: eval_scores.npz  result.json
reports/detection/base_cnn_lfcc_full/: dev_scores.npz  history.csv  result.json
reports/detection/base_cnn_lfcc_sub/: dev_scores.npz  history.csv  result.json
reports/evaluation/: creation_results.json  creation_results.md  signal_stats.json
reports/evaluation/mos/: mos_key.csv  (+1 more)
scripts/: README.md  autorun_baseline.sh  backend_ssl.slurm  base_cnn.slurm  check.slurm  check_deps.py  checkdeps.slurm  cross_test.slurm  detect_one.slurm  evaluate_creation.slurm  extract_ssl.slurm  fetch_results.sh  finetune_xtts.slurm  full_baseline.slurm  hp_ssl.slurm  lab_env.sh  lab_env_pt.sh  lab_env_xtts.sh  logmel_full.slurm  make_smoke_data.py  plot_detection.py  prep_ssl.slurm  rawnet2_full.slurm  say.slurm  score_cnn_eval.slurm  score_ssl_eval.slurm  setup_env.sh  setup_env_pytorch.sh  setup_env_xtts.slurm  smoke.slurm  smoke2.slurm  synth_keras_parallel.slurm  synth_parallel.slurm  synth_xtts.slurm  synth_xtts_ft.slurm  train_detection.slurm  train_keras_tts.slurm  train_ssl.slurm
src/: __init__.py
src/common/: __init__.py  audio.py  metadata.py
src/creation/: __init__.py
src/detection/: __init__.py  backend_keras.py  baseline_cnn.py  cross_test.py  data.py  data_ssl.py  evaluate.py  features_ssl.py  score.py  train.py  train_ssl.py
src/evaluation/: __init__.py  mos.py  run_all.py  signal_stats.py  speaker_sim.py  spectrogram_sim.py
tests/: test_metrics.py
tools/: record.cmd  record.html
tools/webui/: app.py  index.html  run.cmd
(+45 files in other folders)
