[project]
name = "audio-deepfake-detection"
version = "0.1.0"
description = "Audio deep fakes: voice-clone creation (Keras baseline + XTTS-v2) and SSL-frontend detection. Shenkar Neural Networks final project."
readme = "README.md"
requires-python = ">=3.11,<3.12"

# Base deps shared by every part (audio I/O, features, plotting, notebooks).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "librosa>=0.10",       # mel/LFCC features, MCD, spectrograms
    "soundfile>=0.12",     # wav read/write
    "matplotlib>=3.8",     # learning curves, DET curves, spectrograms
    "tqdm>=4.66",
]

# Split by concern. On the GPU server these map to the two provided containers
# (PyTorch / TensorFlow); locally, create two uv envs so torch and tensorflow
# never share an environment.  Install with, e.g.:  uv sync --extra detection
[project.optional-dependencies]
# Part A main (PyTorch container) — voice cloning.
creation = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "coqui-tts>=0.24",     # maintained fork of Coqui TTS (XTTS-v2)
]
# Part B (TensorFlow container) — the Keras detection back-end + Keras TTS baseline.
detection = [
    "tensorflow>=2.17",
    "keras>=3.4",
    "scikit-learn>=1.4",   # EER helpers, splits
]
# SSL frontend feature extraction + speaker-embedding metric (PyTorch container).
ssl = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.44",  # wav2vec2-XLS-R / WavLM frozen frontend
    "speechbrain>=1.0",    # ECAPA-TDNN speaker embeddings (cosine-sim metric)
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
]

[tool.uv]
# Torch/TF/coqui pull large, sometimes-conflicting deps — resolve extras separately.
# (No default extra: `uv sync` installs only the base; add --extra as needed.)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
